// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rotateX renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(0deg);
  -ms-transform: rotateX(0deg);
  transform: rotateX(0deg);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(hasnot);
  -ms-transform: rotateX(hasnot);
  transform: rotateX(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(has);
  -ms-transform: rotateX(has);
  transform: rotateX(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(hasnot);
  -ms-transform: rotateX(hasnot);
  transform: rotateX(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(has);
  -ms-transform: rotateX(has);
  transform: rotateX(has);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(invalid.path.1);
  -ms-transform: rotateX(invalid.path.1);
  transform: rotateX(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(invalid.path.1);
  -ms-transform: rotateX(invalid.path.1);
  transform: rotateX(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(invalid.path.1);
  -ms-transform: rotateX(invalid.path.1);
  transform: rotateX(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(invalid.path.1);
  -ms-transform: rotateX(invalid.path.1);
  transform: rotateX(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(-54881deg);
  -ms-transform: rotateX(-54881deg);
  transform: rotateX(-54881deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(-54881deg);
  -ms-transform: rotateX(-54881deg);
  transform: rotateX(-54881deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(-42365deg);
  -ms-transform: rotateX(-42365deg);
  transform: rotateX(-42365deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(-42365deg);
  -ms-transform: rotateX(-42365deg);
  transform: rotateX(-42365deg);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(July);
    -ms-transform: rotateX(July);
    transform: rotateX(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(September);
    -ms-transform: rotateX(September);
    transform: rotateX(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(July);
    -ms-transform: rotateX(July);
    transform: rotateX(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(September);
    -ms-transform: rotateX(September);
    transform: rotateX(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(May);
    -ms-transform: rotateX(May);
    transform: rotateX(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(June);
    -ms-transform: rotateX(June);
    transform: rotateX(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(April);
    -ms-transform: rotateX(April);
    transform: rotateX(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(May);
    -ms-transform: rotateX(May);
    transform: rotateX(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(June);
    -ms-transform: rotateX(June);
    transform: rotateX(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotateX(April);
    -ms-transform: rotateX(April);
    transform: rotateX(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: rotateX(July);
    -ms-transform: rotateX(July);
    transform: rotateX(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotateX(September);
    -ms-transform: rotateX(September);
    transform: rotateX(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: rotateX(July);
    -ms-transform: rotateX(July);
    transform: rotateX(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotateX(September);
    -ms-transform: rotateX(September);
    transform: rotateX(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(November);
    -ms-transform: rotateX(November);
    transform: rotateX(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotateX(August);
    -ms-transform: rotateX(August);
    transform: rotateX(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotateX(January);
    -ms-transform: rotateX(January);
    transform: rotateX(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(December);
    -ms-transform: rotateX(December);
    transform: rotateX(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotateX(April);
    -ms-transform: rotateX(April);
    transform: rotateX(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(May);
    -ms-transform: rotateX(May);
    transform: rotateX(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotateX(June);
    -ms-transform: rotateX(June);
    transform: rotateX(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotateX(January);
    -ms-transform: rotateX(January);
    transform: rotateX(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(December);
    -ms-transform: rotateX(December);
    transform: rotateX(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotateX(April);
    -ms-transform: rotateX(April);
    transform: rotateX(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotateX(May);
    -ms-transform: rotateX(May);
    transform: rotateX(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotateX(June);
    -ms-transform: rotateX(June);
    transform: rotateX(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(54881deg);
  -ms-transform: rotateX(54881deg);
  transform: rotateX(54881deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(54881deg);
  -ms-transform: rotateX(54881deg);
  transform: rotateX(54881deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(42365deg);
  -ms-transform: rotateX(42365deg);
  transform: rotateX(42365deg);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(42365deg);
  -ms-transform: rotateX(42365deg);
  transform: rotateX(42365deg);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(July);
  -ms-transform: rotateX(July);
  transform: rotateX(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(July);
  -ms-transform: rotateX(July);
  transform: rotateX(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(June);
  -ms-transform: rotateX(June);
  transform: rotateX(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(June);
  -ms-transform: rotateX(June);
  transform: rotateX(June);
}

<div
    className="c0"
  />,
]
`;

exports[`rotateX renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: rotateX(DarkSlateBlue);
  -ms-transform: rotateX(DarkSlateBlue);
  transform: rotateX(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(DarkSlateBlue);
  -ms-transform: rotateX(DarkSlateBlue);
  transform: rotateX(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(DarkSlateBlue);
  -ms-transform: rotateX(DarkSlateBlue);
  transform: rotateX(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotateX(DarkSlateBlue);
  -ms-transform: rotateX(DarkSlateBlue);
  transform: rotateX(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
